--- a/Assets/SRDebuggerUtils/package.json
+++ b/Assets/SRDebuggerUtils/package.json
@@ -16,7 +16,7 @@
     {
       "displayName": "Basic",
       "description": "Basic Assets",
-      "path": "Samples/Nreal"
+      "path": "Samples/Basic"
     },
     {
       "displayName": "Nreal",
