--- a/Assets/SRDebuggerUtils/package.json
+++ b/Assets/SRDebuggerUtils/package.json
@@ -22,6 +22,11 @@
       "displayName": "Nreal",
       "description": "for Nreal Assets",
       "path": "Samples/Nreal"
+    },
+    {
+      "displayName": "Oculus",
+      "description": "for Oculus Assets",
+      "path": "Samples/Oculus"
     }
   ]
 }
